Update on Overleaf.

--- a/listas.tex
+++ b/listas.tex
@@ -4960,7 +4960,7 @@ Portanto, $\prin{(ST+TS)(u),v} =  \prin{u, (ST + TS)(v)},$ e $ST + TS$ é autoad
 
 \exercicio{24} Seja $V$ um espaço vetorial com dimensão finita e seja $T \in \mathcal{L}(V).$ Mostre que
 \dividiritens{
-\task[
+\task[\pes{a}] Se $T$ é nilpot
 }
 
 \solucao{}
